Cache glyph lookups, skip unused table measurement, and number fonts deterministically (#23)
Performance no-brainers measured with :skald-layout:performanceBenchmark
on the same JVM (medians of three windows):

- text-width measurement 76 ns -> 15 ns
- 1,000-row report 21.8 ms -> 15.9 ms, allocation 65.5 MB -> 39.5 MB
- ReAI invoice allocation 2.16 MB -> 1.89 MB

Changes:
- TrueTypeFont keeps a per-face int[0x800] glyph array filled once at load.
  The bundled Skald Sans faces have only a format 4 cmap with 114 segments
  that was scanned linearly for every code point, roughly 13 times per
  table cell across measurement and drawing.
- PdfFont.glyphRun and LayoutEngine.tokens walk code points with
  codePointAt instead of an IntStream pipeline.
- renderFlowTable estimates the full table height only when keepTogether
  is set; renderCellContent measures content height only for MIDDLE and
  BOTTOM alignment. Both results were otherwise discarded.
- PdfPage.fonts/fontUsage/opacities and NativePdfWriter.collectFonts keep
  first-use order instead of Map.copyOf/IdentityHashMap hash order, so the
  same document now produces byte-identical output across JVMs.
- NativePdfWriter.buildObjects copies the page list once instead of per page.
- The sealed-signature ByteRange pattern and PdfText.collapse patterns are
  compiled once.
- RasterImages decodes and encodes through MemoryCacheImageInputStream and
  MemoryCacheImageOutputStream instead of ImageIO's default temp-file cache.
- The Gradle daemon gets a 2 GiB heap for the parallel multi-module build.

Verification: clean build with 245 tests passing; all 91 generated use-case
PDFs pass qpdf --check; Poppler renders of all 102 pages at 72 DPI and
extracted layout text are identical to main; 85 of 91 files are
byte-identical, the rest differ only in object numbering.

Release 1.16.0.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>